1999-03-20  Roland McGrath  <roland@baalperazim.frob.com>

	* boot.c (S_term_get_peername): New function.

1999-03-14  Roland McGrath  <roland@baalperazim.frob.com>

	* boot.c: Fix typo in last change.

1999-03-10  Roland McGrath  <roland@baalperazim.frob.com>

	* boot.c (main): Only use real device name if root_store is for an
	enforced single run starting at the beginning of the device.

1999-03-09  Roland McGrath  <roland@baalperazim.frob.com>

	* boot.c (main): Add newline to error msg.
	Patch by Marcus Brinkmann <Marcus.Brinkmann@ruhr-uni-bochum.de>.

1999-02-16  Roland McGrath  <roland@baalperazim.frob.com>

	* boot.c (S_io_revoke): Add reply, replyPoly args.

Tue Feb 16 05:06:12 1999  Thomas Bushnell, BSG  <tb@mit.edu>

	* boot.c (S_io_revoke): New (unsupported) routine.

1998-12-26  Roland McGrath  <roland@baalperazim.frob.com>

	* boot.c (isig): New variable.
	(init_termstate): If it's set, set ISIG flag in c_lflag.
	(options): New option -I/--isig.
	(parse_opt): Make -I set `isig'.
	(boot_script_exec_cmd): Print out args as well as file name.

1998-09-04  Roland McGrath  <roland@baalperazim.frob.com>

	* boot_script.c: Include <string.h> instead of declaring memset here.
	Include <stdlib.h> instead of declaring malloc, free here.

1997-07-08  Miles Bader  <miles@gnu.ai.mit.edu>

	* boot_script.c (prompt_resume_task): Pass more than a single
	character buffer to safe_gets.

Mon Jul  7 16:25:49 1997  Thomas Bushnell, n/BSG  <thomas@gnu.ai.mit.edu>

	* boot.c: Include <fcntl.h> instead of <fcntlbits.h>.  Suggested
	by Marcus G. Daniels (marcus@cathcart.sysc.pdx.edu).

1997-06-20  Miles Bader  <miles@gnu.ai.mit.edu>

	* boot.c (bootscript): Made global.
	(parse_opt): New function.
	(options, doc, args_doc): New variables.
	(bootscript_args): Now an array.
	(ds_device_open, ds_device_close, ds_device_write,
	ds_device_write_inband, ds_device_read, ds_device_read_inband,
	ds_device_get_status, ds_device_set_status, ds_device_map,